--- a/public/admin/gestion.html
+++ b/public/admin/gestion.html
@@ -236,7 +236,7 @@
         // Si c'est la réponse admin, on la surligne en rouge
         if (response.is_owner) {
           tr.classList.remove('hover:bg-gray-50');
-          tr.classList.add('bg-red-100', 'border-l-4', 'border-red-500');
+          tr.classList.add('bg-red-100');
         }
 
         // Nom
